# little-dataframe

./: .gitignore  404.html  Cargo.toml  README.md  arrow_2_intro.html  arrow_intro.html  index.html  motivation.html  polars_intro.html  print.html  searchindex.js  searchindex.json
chunked_array/: aggregate.html  filter.html  intro.html  series.html  sort.html
dataframe/: groupby.html  intro.html  join.html
lazyframe/: intro.html  predicate_pushdown.html  projection_pushdown.html
mdbook/: book.toml
mdbook/src/: SUMMARY.md  arrow_2_intro.md  arrow_intro.md  motivation.md  polars_intro.md
mdbook/src/chapter_3/: core_concepts.md
mdbook/src/chunked_array/: filter.md  intro.md  sort.md
src/: lib.rs
src/chunked_array/: aggregate.rs  aggregate_test.rs  builder.rs  chunk_compare.rs  chunk_compare_test.rs  chunk_equal.rs  chunk_full.rs  chunk_get.rs  filter.rs  filter_test.rs  format.rs  iter.rs  iter_test.rs  mod.rs  mod_test.rs  sort.rs  sort_test.rs  test_utils.rs  to_vec.rs  types.rs  utils.rs  utils_test.rs
src/core/: field.rs  iterator.rs  mod.rs  schema.rs  sync_ptr.rs
src/dataframe/: filter.rs  join.rs  join_test.rs  mod.rs  utils.rs  utils_test.rs
src/hashing/: implementations.rs  mod.rs  partition.rs
src/js_little_dataframe/: test.ts
src/lazy_dataframe/: aexpr.rs  alogical_plan.rs  arena.rs  expr.rs  frame.rs  lazy_groupby.rs  lit.rs  logical_plan.rs  logical_plan_builder.rs  mod.rs
src/little_arrow/: types.rs
src/physical_plan/: mod.rs
src/random/: mod.rs
src/series/: comparison.rs  constructor.rs  constructor_test.rs  downcast.rs  implementations.rs  mod.rs  series_trait.rs
src/types/: mod.rs
(+31 files in other folders)
