[package]
name = "little-dataframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
arrow2 = { version = "0.17.1", features = [  
        "compute_aggregate",
        "compute_arithmetics",
        "compute_boolean",
        "compute_boolean_kleene",
        "compute_cast",
        "compute_comparison",
        "compute_concatenate",
        "compute_filter",
        "compute_if_then_else"
    ]}
hashbrown = "0.13.2"
indexmap = "1.9.3"
once_cell = "1.17.1"
rand = "0.8.5"
rayon = "1.7.0"
smartstring = "1.0.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
